finalisation colonne gauche

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css?family=Patua+One|Yantramanav" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
 </head>
 <body>
 
@@ -30,7 +31,7 @@
 
 				<div>
 					<h3>Career Objective</h3>
-					<p><b>As a former student in the domain of marketing and management, and due to my passion for creativeness, progamming, digital world and my desire of self-actualization, I would like to gain enough experience and test my skills in order to realize one of my most exciting goals; becoming an entrepreneur.</b></p>
+					<p id="description"><b>As a former student in the domain of marketing and management, and due to my passion for creativeness, progamming, digital world and my desire of self-actualization, I would like to gain enough experience and test my skills in order to realize one of my most exciting goals; becoming an entrepreneur.</b></p>
 				</div>
 
 				<div>
@@ -57,6 +58,23 @@
 				<div>
 					<h3>Interest</h3>
 
+					<div class="interest">
+						<div>
+							<img src="images/around.png">
+							<img src="images/beetle.png">
+							<img src="images/bicycle.png">
+						</div>
+						<div>
+							<img src="images/cooking.png">
+							<img src="images/jogging.png">
+							<img src="images/paint-palette.png">
+						</div>
+						<div>
+							<img src="images/snowboard.png">
+							<img src="images/trekking.png">
+							<img src="images/wacom.png">
+						</div>
+					</div>
 
 				</div>
 
@@ -102,7 +120,7 @@
 
 				<div>
 					<div>
-						<p> class="textTitle"Internee as an International Representative (Explort)<p>
+						<p class="textTitle">Internee as an International Representative (Explort)<p>
 						<p>The Clay and Paint Factory</p>
 						<p>one month in Belgium, two months in Chile</p>
 						<p>Feb-Apr 2018</p>
