transition sur le visage + animations typewriter

--- a/index.html
+++ b/index.html
@@ -4,17 +4,40 @@
 	<title>Moi, Olivier Keutgens</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<link href="https://fonts.googleapis.com/css?family=Patua+One|Yantramanav" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Bree+Serif" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,400i,700,700i" rel="stylesheet">
 </head>
+
 <body>
 
-	<div class="container">
+	<header>
+		<div class="typewriter">
+			<h1>Hello, I am Olivier Keutgens!</h1>
+		</div>
+		<div class="typewriter">
+			<h2 class="typewriter">... and this my <span>resume</span> head.</h2>
+		</div>
+	</header>
+
+	<div class="content">
+
+		<div class="info">
+			
+		</div>
+
+		<div class="profile-picture">
+			<img src="./images/profile_picture_destroyed_hair.png" id="hair"/>
+			<img src="./images/profile_picture_destroyed_eyes.png" id="eyes"/>
+			<img src="./images/profile_picture_destroyed_nose.png" id="nose"/>
+			<img src="./images/profile_picture_destroyed_mouth.png" id="mouth"/>
+			<img src="./images/profile_picture_destroyed_shadow.png" id="shadow"/>
+		</div>
+		
+		<div class="info">
+			
+		</div>
 
 
-
-
-		<div id="profileInfo">
+	<!--	<div id="profileInfo">
 			<div id="profilePicture">
 				<img src="images/profilePicture.jpg" alt="Profile Picture">
 			</div>
@@ -26,7 +49,7 @@
 				</div>
 
 				<div>
-					<h2>Marketing & Management Profile<br>- Junior Developer</h2>
+					<h2>Junior Developer - Front end & Back end </h2>
 				</div>
 
 				<div>
@@ -269,11 +292,14 @@
 					<a href="https://twitter.com/OlivierKeutgens"> <img src="images/twitter.png" alt="twitter logo"> </a>
 				</div>
 			</div>
-		</footer>
+		</footer> -->
 		
 
 
-	</div>
+	</div> 
 
 </body>
+
+<script href="script.js"></script>
+
 </html>
