layout + first paragraph

--- a/index.html
+++ b/index.html
@@ -13,15 +13,20 @@
 		<div class="typewriter">
 			<h1>Hello, I am Olivier Keutgens!</h1>
 		</div>
-		<div class="typewriter">
-			<h2 class="typewriter">... and this my <span>resume</span> head.</h2>
+		<div class="secondtypewriter">
+			<h2 class="typewriter">... and this my <span>resume.</span></h2>
+			<h2 class="end">&nbsp;head.</h2>
 		</div>
 	</header>
 
 	<div class="content">
 
-		<div class="info">
-			
+		<div class="info-left">
+						<h1 class="title">&nbsp;Junior Developer - Front end & Back end &nbsp;</h1>
+	
+					<div>
+						<h5>Passionate about <b>entrepreneurship</b>, <b>creativity</b> and <b>digitality</b>, always optimist, nature and diversity lover, change-enthusiast, backpacker, dedicated and motivated volunteer, marketer (with Master!), flexible and eager to learn from others. I aimed at improving the world we are living in by putting my skills at the service of projects that make sense to me.</h5>
+					</div>
 		</div>
 
 		<div class="profile-picture">
@@ -32,30 +37,12 @@
 			<img src="./images/profile_picture_destroyed_shadow.png" id="shadow"/>
 		</div>
 		
-		<div class="info">
+		<div class="info-right">
 			
 		</div>
 
 
-	<!--	<div id="profileInfo">
-			<div id="profilePicture">
-				<img src="images/profilePicture.jpg" alt="Profile Picture">
-			</div>
-
-			<div>
-
-				<div>
-					<h1>Olivier<br>KEUTGENS</h1>
-				</div>
-
-				<div>
-					<h2>Junior Developer - Front end & Back end </h2>
-				</div>
-
-				<div>
-					<h3 class="title">Career Objective</h3>
-					<h5><b>As a former student in the domain of marketing and management, and due to my passion for creativeness, progamming, digital world and my desire of self-actualization, I would like to gain enough experience and test my skills in order to realize one of my most exciting goals; becoming an entrepreneur.</b></h5>
-				</div>
+	<!--	
 
 				<div>
 					<h3 class="title">Contact</h3>
