introduction + dropdown buttons

--- a/index.html
+++ b/index.html
@@ -22,11 +22,13 @@
 	<div class="content">
 
 		<div class="info-left">
-						<h1 class="title">&nbsp;Junior Developer - Front end & Back end &nbsp;</h1>
-	
-					<div>
-						<h5>Passionate about <b>entrepreneurship</b>, <b>creativity</b> and <b>digitality</b>, always optimist, nature and diversity lover, change-enthusiast, backpacker, dedicated and motivated volunteer, marketer (with Master!), flexible and eager to learn from others. I aimed at improving the world we are living in by putting my skills at the service of projects that make sense to me.</h5>
-					</div>
+			<div class="title">
+				<h1>&nbsp;Junior Developer - Front end & Back end &nbsp;</h1>
+			</div>
+
+			<div class="introduction">
+				<h5>Passionate about <b>entrepreneurship</b>, <b>creativity</b> and <b>digitality</b>, always optimist, nature and diversity lover, change-enthusiast, backpacker, dedicated and motivated volunteer, marketer (with Master!), flexible and eager to learn from others. I aimed at improving the world we are living in by putting my skills at the service of projects that make sense to me.</h5>
+			</div>
 		</div>
 
 		<div class="profile-picture">
@@ -38,7 +40,34 @@
 		</div>
 		
 		<div class="info-right">
-			
+			<div class="info-container">
+				<button class="dropdown-subtitle">
+					<img src="./images/keyboard-right-arrow-button.svg" class="right-arrow" alt="dropdown education">
+					<h3>Education</h3>
+				</button>
+
+				<div>
+					<p></p>
+				</div>
+			</div>	
+			<div class="info-container">		
+				<button class="dropdown-subtitle">
+					<img src="./images/keyboard-right-arrow-button.svg" class="right-arrow" alt="dropdown work experience">
+					<h3>Work Experience</h3>
+				</button>
+				<div>
+					<p></p>
+				</div>
+			</div>
+			<div class="info-container">
+				<button class="dropdown-subtitle">
+					<img src="./images/keyboard-right-arrow-button.svg" class="right-arrow" alt="dropdown personal experience">
+					<h3>Personal Experience</h3>
+				</button>
+				<div>
+					<p></p>
+				</div>
+			</div>
 		</div>
 
 
