events on buttons for displaying content

--- a/index.html
+++ b/index.html
@@ -40,34 +40,46 @@
 		</div>
 		
 		<div class="info-right">
+
 			<div class="info-container">
-				<button class="dropdown-subtitle">
+
+				<button class="dropdown-button" id="button1">
 					<img src="./images/keyboard-right-arrow-button.svg" class="right-arrow" alt="dropdown education">
 					<h3>Education</h3>
 				</button>
 
-				<div>
-					<p></p>
+				<div class="dropdown-content" id="content1">
+					<p>Bonjour</p>
 				</div>
-			</div>	
-			<div class="info-container">		
-				<button class="dropdown-subtitle">
+
+			</div>
+
+			<div class="info-container">
+
+				<button class="dropdown-button" id="button2">
 					<img src="./images/keyboard-right-arrow-button.svg" class="right-arrow" alt="dropdown work experience">
 					<h3>Work Experience</h3>
 				</button>
-				<div>
-					<p></p>
+
+				<div class="dropdown-content" id="content2">
+					<p>Bonjour</p>
 				</div>
+
 			</div>
+
 			<div class="info-container">
-				<button class="dropdown-subtitle">
+
+				<button class="dropdown-button" id="button3">
 					<img src="./images/keyboard-right-arrow-button.svg" class="right-arrow" alt="dropdown personal experience">
 					<h3>Personal Experience</h3>
 				</button>
-				<div>
-					<p></p>
+
+				<div class="dropdown-content" id="content3">
+					<p>Bonjour</p>
 				</div>
+
 			</div>
+
 		</div>
 
 
@@ -316,6 +328,6 @@
 
 </body>
 
-<script href="script.js"></script>
+<script src="script.js"></script>
 
 </html>
